# mcp-docs-server

./: .env.example  .gitignore  CLAUDE.md  README.md  backends.yaml  fastmcp.json  pyproject.toml  server.py
mcp_docs/: __init__.py  backends.py  discovery.py  proxy.py
skills/docs-router/: SKILL.md
tests/: conftest.py  test_auth.py  test_backends.py  test_discovery.py  test_manifest.py  test_proxy.py  test_server.py  test_skill.py
